...
      }}
    >
      <Stack.Screen name="JugarHome" component={JugarTab} options={{ headerShown: false }} />
      <Stack.Screen
        name="QuickMatch"
        component={QuickMatchScreen}
        options={{ title: 'Partida Rápida' }}
      />
      <Stack.Screen
        name="FriendsLobby"
        component={FriendsLobbyScreen}
        options={{ title: 'Jugar con Amigos' }}
      />
...
        component={GameScreen}
        options={{
          title: 'Juego',
          headerShown: false,
        }}
      />
      <Stack.Screen name="Login" component={LoginScreen} options={{ title: 'Iniciar Sesión' }} />
      <Stack.Screen
        name="Register"
        component={RegisterScreen}
        options={{ title: 'Crear Cuenta' }}
      />
      <Stack.Screen
...
