...
    return new Promise<boolean>(resolve => {
      Alert.alert(
        'Permiso de Micrófono',
        'Guiñote necesita acceso al micrófono para grabar mensajes de voz durante el juego. Podrás comunicarte con otros jugadores mediante notas de voz.',
        [
          {
            text: 'Cancelar',
            onPress: () => {
              setHasPermission(false);
              resolve(false);
            },
            style: 'cancel',
          },
...
